# MLCAF

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md  setupAnalysis.sh  setupAutoComplete.sh
BSMtautauCAF/: BSMLepHad_TopSys.h  BSMTriggerDecision.h  ExtrapolationSys.h  HiggsPt.h  InvMTauJet.h  JetFakes.h  JetFakesReweight.h  LPXKfactor.h  LepHadObservable.h  LeptonFakes.h  LeptonFakesReweight.h  MCFakesSF.h  MCFakesSYS.h  MCOtherJetsTFF.h  MTLepJet.h  MTLepTau.h  MTTauJet.h  MTtot.h  MatTransCorrection.h  MultiJetsLFF.h  MultiJetsLFFReweightSYS.h  MultiJetsSF.h  MultiJetsTFF.h  OtherJetsSF.h  OtherJetsTFF.h  OtherJetsTFR.h  Pzeta.h  QCDJetFakeTau.h  QCDReweight.h  STopPDFDoWeight.h  STopPDFUpWeight.h  ScaleFactor.h  SumOfPt.h  TTBarPDFDoWeight.h  TTBarPDFUpWeight.h  TauReweight.h  TopExtrapolationSys.h  TopResidualSys.h  TopReweight.h  TopReweightLQ.h  (+14 more)
CAFExample/: HWWBTagWeight.h  HWWDRMinllOtherl.h  HWWElectronWeight.h  HWWEventWeight.h  HWWFakeFlavorDefs.h  HWWFakeFlavorZjets.h  HWWInvMass2L.h  HWWJVTWeight.h  HWWLeptonIDHelper.h  HWWMCWeight.h  HWWMuonTTVAWeight.h  HWWMuonWeight.h  HWWTrigConfig.h  HWWTriggerMatchingObs.h  HWWTriggerSelection.h  HWWTriggerWeight.h  HWWZBosonPairFakeIndex.h  MjjMaxObservable.h  MjjVectorObservable.h  PassWZVeto.h
CAFExample/CAFExample/: FakeLeptonMT.h  HWWBTagWeight.h  HWWEventWeight.h  HWWForwardJVTWeight.h  HWWInvMass2L.h  HWWLeptonIDHelper.h  HWWLeptonIDObservable.h  HWWMuonTTVAWeight.h  HWWMuonWeight.h  HWWPRWWeight.h  HWWSFBase.h  HWWSelection.h  HWWTrigBase.h  HWWTrigConfig.h  HWWTriggerWeight.h  TransMassW.h
CAFExample/Root/: HWWElectronWeight.cxx  HWWEventWeight.cxx  HWWSFBase.cxx  HWWSelection.cxx  HWWTrigBase.cxx  HWWZBosonPairFakeIndex.cxx  MjjMaxObservable.cxx  MjjVectorObservable.cxx  PassWZVeto.cxx  TransMassW.cxx
CAFExample/Tutorial/: GridScanner.md  TQFolder.md  WritingCustomObservables.md
CAFExample/python/: LeptonIDHelper.py  TrigConfig.py
Htautau/: BSMLepHad_TopSys.h  BSMRandomBlind.h  BSMTriggerMETDecision.h  BSMTriggerWeight.h  DeltaRFakeLepJetmin_ll_v05.h  EventClass.h  EventSelection.h  EventSelectionObs_base.h  EventSelectionObs_leplep_base.h  EventSelectionObs_lfv_base.h  EventSelection_leplep_base.h  EventSelection_leplep_base_static.h  EventSelection_leplep_default.h  EventSelection_leplep_fake.h  EventSelection_leplep_tight.h  EventSelection_lfv_leplep_default.h  FakeLepSel_ll.h  FakesMM.h  FakesMM_v05.h  LepHadObservable.h  LeptonFF.h  OverlapRemovalAlg_leplep.h  OverlapRemoval_leplep.h  PU_weight_ll_v05.h  Pzeta.h  ScaleFactor.h  TemplateFake_weight_ll.h  Trigger.h  TriggerSF.h  TruthSelector.h  TruthSelector.h.bak  VpTReweight.h  btagEffSys.h  btagSelector.h  btagTauSys.h  dPhiDistReweight.h  fakeFactor.h  higgsPt.h  isoReweight.h  mTtot.h  (+5 more)
Htautau/old/: BVeto_ll_v05.h  CollAppX_ll_v05.h  DphiLL_ll_v05.h  EventSelectionObs_base.h.new  LeadJetPt_ll_v05.h  LepSelec_ll.h  LepSelec_ll_v05.h  MVis_ll_v05.h  MetHpto_ll_v05.h  Mjjleplep.h  Mjjleplep_v04.h  Mt_ll_v05.h  NSelecLep_ll_v05.h  OSLep_ll_v05.h  SF_JVT_ll_v05.h  SF_MVX_ll_v05.h  ScaleFactor_ll.h  ScaleFactor_ll_v05.h  SumLepPt_ll_v05.h  TriggerWeight_ll.h  TriggerWeight_ll_v05.h  Trigger_ll.h  Trigger_ll_v05.h  TruthMatchingLep_ll_v05.h
Root/: BSMLepHad_TopSys.cxx  BSMRandomBlind.cxx  BSMTriggerDecision.cxx  BSMTriggerMETDecision.cxx  BSMTriggerWeight.cxx  DeltaRFakeLepJetmin_ll_v05.cxx  EventSelection.cxx  EventSelectionObs_base.cxx  EventSelectionObs_lfv_base.cxx  EventSelection_leplep_base.cxx  EventSelection_leplep_default.cxx  EventSelection_leplep_fake.cxx  EventSelection_leplep_tight.cxx  EventSelection_lfv_leplep_default.cxx  ExtrapolationSys.cxx  FakeLepSel_ll.cxx  FakeLeptonMT.cxx  FakesMM.cxx  FakesMM_v05.cxx  HWWBTagWeight.cxx  HWWDRMinllOtherl.cxx  HWWElectronWeight.cxx  HWWEventWeight.cxx  HWWFakeFlavorZjets.cxx  HWWForwardJVTWeight.cxx  HWWInvMass2L.cxx  HWWJVTWeight.cxx  HWWLeptonIDHelper.cxx  HWWLeptonIDObservable.cxx  HWWMCWeight.cxx  HWWMuonTTVAWeight.cxx  HWWMuonWeight.cxx  HWWPRWWeight.cxx  HWWSelection.cxx  HWWTrigBase.cxx  HWWTrigConfig.cxx  HWWTriggerMatchingObs.cxx  HWWTriggerSelection.cxx  HWWTriggerWeight.cxx  HWWZBosonPairFakeIndex.cxx  (+69 more)
Root-CAFExample/: HWWZBosonPairFakeIndex.cxx
Root/old/: BVeto_ll_v05.cxx  CollAppX_ll_v05.cxx  DphiLL_ll_v05.cxx  LeadJetPt_ll_v05.cxx  LepSelec_ll.cxx  LepSelec_ll_v05.cxx  MVis_ll_v05.cxx  MetHpto_ll_v05.cxx  Mjjleplep.cxx  Mjjleplep_v04.cxx  Mt_ll_v05.cxx  NSelecLep_ll_v05.cxx  OSLep_ll_v05.cxx  OverlapRemovalAlg_leplep.cxx  OverlapRemoval_leplep.cxx  SF_JVT_ll_v05.cxx  SF_MVX_ll_v05.cxx  ScaleFactor_ll.cxx  ScaleFactor_ll_v05.cxx  SumLepPt_ll_v05.cxx  TriggerWeight_ll.cxx  TriggerWeight_ll_v05.cxx  Trigger_ll.cxx  Trigger_ll_v05.cxx  TruthMatchingLep_ll_v05.cxx
Tutorial/: GridScanner.md  PrepareNeuralNetworkModel.md  TQFolder.md  WritingCustomObservables.md
Tutorial/submission-hello/: README.md  hello_world.py
Tutorial/submission-paper/: .Makefile  README.md  config.yml  create_scatter_data.py  y_view.py
doc/: Analysis.md  FAQ.md  FakeFactor.md  Fakes.md  Systematics.md
python/: LeptonIDHelper.py  __init__.py  analyzesyst.py
setup/: README.md  setupAutoComplete.sh  setupLocal.sh  writeSetupScript.py
share/: MakeFFPlots_LFF_btag.py  MakeFFPlots_LFF_bveto.py  MakeFFPlots_WFF_DPhi4.py  MakeFFPlots_WFF_OS.py  MakeFFPlots_WFF_SS.py  MakeFFPlots_canvas_LFF_btag.py  MakeFFPlots_canvas_LFF_bveto.py  MakeFFPlots_canvas_WFF_OS.py  MakeFFPlots_canvas_WFF_SS.py  TruthFakeTauComposition.py  WriteMergeSYSCondorScripts.py  analyze.py  cleanup.sh  create.py  createVariations.tq  dump-LXPLUS.py  dumpHist.py  execute.py  initialize.py  link_systematics.sh  merge-LXPLUS.py  prepare.py  scriptHepSub.py  statistics.py  submit-IHEP.py  submit-condor.py  submit-merge.py  submit-statistics.py  submit.py  visualize.py
share/ConfigCommon/: htautau_lephad_common.cfg  htautau_lephad_common_cuts.def  (+8 more)
tools/: JobHandler.py  adaptDNNJSONFileToCAFCore.py  exportHistogramsFromSampleFolder.py  generateSystematicsBands.py  plotUtils.py  runGridScanner.py
(+2729 files in other folders)
